--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <!-- manifest -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
+  <!-- google font -->
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet" />
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/9df7bb9731.js" crossorigin="anonymous"></script>
   <!--
