--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Pixavibe is an image-sharing social media site where you can post and comment on users' images." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
   <!--
       site.manifest provides metadata used when your web app is installed on a
